# master_tutor

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  ruff.toml
app/: config.py  main.py
app/agents/: analyzer.py  orchestrator.py  reporter.py  researcher.py
app/api/: research.py
app/llm/: __init__.py  base.py  factory.py  types.py
app/llm/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  openai_provider.py
app/prompts/: research.py
app/state/: __init__.py  types.py
app/utils/: __init__.py  tokens.py
docs/: STREAMING.md
tests/: test_orchestrator.py
